Fixes whitespace on right side.

--- a/public/style.css
+++ b/public/style.css
@@ -5,9 +5,19 @@
   box-sizing: border-box;
 }
 
-body{
+html, body{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+  }
+
+body {
   font-family: 'Montserrat', sans-serif;
   position: relative;
+  height: 100%;
+  min-width: 100%;
+  overflow-x: hidden;
 }
 
 a, a:visited{
@@ -86,7 +96,7 @@ input:focus{
 
 #main-nav{
   padding: 1.5em 3%;
-  max-width: 1500px;
+  min-width: 100%;
   height: 500px;
   border-bottom: 1px solid #e9e9e9;
   background: url('LB4.jpeg') center center no-repeat;
@@ -97,6 +107,7 @@ input:focus{
 #main-nav:before{
   content: '';
   position: absolute;
+  width: 100%;
   height: 600px;
   top: 0;
   right: 0;
@@ -265,11 +276,11 @@ input:focus{
   height: 170px;
   width: 170px;
   border-radius: 150px;
-	-webkit-border-radius: 150px;
-	-moz-border-radius: 150px;
-	background: url('Untitled-1.jpg') no-repeat;
+  -webkit-border-radius: 150px;
+  -moz-border-radius: 150px;
+  background: url('Untitled-1.jpg') no-repeat;
   margin: 0 auto;
-	box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+  box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 }
 
 #skills{
@@ -345,12 +356,12 @@ input:focus{
 
 #footer{
   width: 100%;
-  max-width: 1500px;
   height: 240px;
   background: #262626;
   text-align: center;
   padding-top: 2em;
 }
+
 
 #footer p{
   text-align: center;
